# enron-rl

./: .gitignore  CLAUDE.md
.claude/docs/research/: prime-rl-oversampling.md
configs/art_e_rl/: 1.7b.toml  4b.toml  8b.toml
data/art_e_vince_kaminski/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/art_e_vince_kaminski/train/: data-00000-of-00001.arrow  state.json
environments/art_e/: pyproject.toml
environments/art_e/art_e/: __init__.py  art_e.py
environments/art_e/art_e/utils/: local_email_db.py  search_tools.py
examples/enron_email/: README.md  rl.toml
scripts/: create_filtered_dataset.py
src/prime_rl/inference/vllm/: serving_chat_with_tokens.py
src/prime_rl/orchestrator/: config.py  orchestrator.py
