[project]
name = "art_e"
version = "0.1.0"
description = "ART-E: a tool-using email research RL environment for Verifiers"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "openai>=1.0.0",
    "openai-agents>=0.6.0",
    "pydantic>=2.0.0",
    "tqdm>=4.0.0",
    "verifiers>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
